--- a/s3_website.yml
+++ b/s3_website.yml
@@ -1,7 +1,7 @@
 s3_id: <%= ENV['AWS_ACCESS_KEY_ID'] %>
 s3_secret: <%= ENV['AWS_SECRET_ACCESS_KEY'] %>
 s3_bucket: models-resources
-s3_key_prefix: starter-projects
+s3_key_prefix: connected-bio-spaces
 s3_endpoint: us-east-1
 gzip: true
 
@@ -12,20 +12,20 @@ cloudfront_wildcard_invalidation: true
 <% if ENV['TRAVIS_BRANCH'] == 'production' %>
 # in this case we are going to deploy this branch to the top level of the domain
 # so we need to ignore the version and branch folders
-ignore_on_server: ^starter-projects/(version/|branch/)
+ignore_on_server: ^connected-bio-spaces/(version/|branch/)
 <% else %>
 # in this case we are going to deploy this code to a subfolder of either the branch
 # or version folder. So ignore everything except this folder.
 # S3_DEPLOY_DIR is set by s3_deploy.sh
-ignore_on_server: ^(?!starter-projects/<%= Regexp.escape(ENV['S3_DEPLOY_DIR']) %>/)
+ignore_on_server: ^(?!connected-bio-spaces/<%= Regexp.escape(ENV['S3_DEPLOY_DIR']) %>/)
 <% end %>
 max_age:
-  "starter-projects/*": 600 # 10 minutes
-  "starter-projects/version/*": 31536000 # 1 year
-  "starter-projects/branch/*": 0
+  "connected-bio-spaces/*": 600 # 10 minutes
+  "connected-bio-spaces/version/*": 31536000 # 1 year
+  "connected-bio-spaces/branch/*": 0
 
 cloudfront_distribution_config:
   aliases:
     quantity: 1
     items:
-      - starter-projects.concord.org
+      - connected-bio-spaces.concord.org
