--- a/package.json
+++ b/package.json
@@ -101,6 +101,7 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "@types/react-jsonschema-form": "^1.0.11",
     "immutable": "^3.8.2",
     "lodash": "^4.17.11",
     "mobx": "^5.5.0",
@@ -109,6 +110,7 @@
     "query-string": "^6.1.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-jsonschema-form": "^1.0.5",
     "uuid": "^3.3.2",
     "wait-on": "^3.0.1"
   }
