--- a/package.json
+++ b/package.json
@@ -104,6 +104,8 @@
   },
   "dependencies": {
     "@types/react-jsonschema-form": "^1.0.11",
+    "@types/chart.js": "^2.7.40",
+    "chart.js": "^2.7.3",
     "immutable": "^3.8.2",
     "lodash": "^4.17.11",
     "mobx": "^5.5.0",
@@ -113,6 +115,7 @@
     "populations.js": "^0.1.1",
     "query-string": "^6.1.0",
     "react": "^16.5.0",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.5.0",
     "react-jsonschema-form": "^1.0.5",
     "uuid": "^3.3.2",
