--- a/package.json
+++ b/package.json
@@ -107,6 +107,8 @@
     "mobx": "^5.5.0",
     "mobx-react": "^5.2.8",
     "mobx-state-tree": "^3.4.0",
+    "populations-react": "0.0.1",
+    "populations.js": "^0.1.0",
     "query-string": "^6.1.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
