--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.4.2",
+    "node-pre-gyp": "^0.11.0",
     "node-sass": "^4.9.3",
     "npm-run-all": "^4.1.3",
     "postcss-loader": "^3.0.0",
