--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(jsx?|tsx?)$",
     "testPathIgnorePatterns": [
       "/node_modules/",
-      "/cypress/"
+      "/cypress/",
+      "/.scss"
     ],
     "coveragePathIgnorePatterns": [
       "/node_modules/",
-      "src/utilities/test-utils.ts"
+      "src/utilities/test-utils.ts",
+      "/.scss"
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
-      "\\.(css|less|sass)$": "<rootDir>/__mocks__/styleMock.js"
+      "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.js"
     },
     "moduleFileExtensions": [
       "ts",
