--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "flat": "^4.1.0",
     "immutable": "^3.8.2",
     "lodash": "^4.17.11",
+    "markdown-to-jsx": "^6.9.0",
     "mobx": "^5.5.0",
     "mobx-react": "^5.2.8",
     "mobx-state-tree": "^3.4.0",
