--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/jest": "^23.3.2",
     "@types/lodash": "^4.14.116",
     "@types/query-string": "^6.1.0",
+    "@types/rc-slider": "^8.6.0",
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.8",
     "@types/react-jsonschema-form": "^1.0.11",
@@ -120,6 +121,7 @@
     "populations-react": "0.0.2",
     "populations.js": "^0.1.5",
     "query-string": "^6.1.0",
+    "rc-slider": "^8.6.3",
     "react": "^16.5.0",
     "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.5.0",
