Adding cypress run config and smoke test

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "test:debug": "node --nolazy --inspect-brk ./node_modules/.bin/jest --runInBand --no-cache",
     "test:watch": "jest --watchAll",
     "test:coverage:watch": "jest --coverage --watchAll",
-    "test:cypress": "cypress run",
+    "test:cypress": "cypress run --browser chrome --headed --no-exit --spec 'cypress/integration/smoke-test.spec.js'",
     "test:cypress:open": "cypress open",
     "test:full": "npm-run-all test test:cypress"
   },
