Initialize student data with iframe-phone
If we are in LARA, save data on change, and receive initial student data
before initializing application.

[#163457123]

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
   "dependencies": {
     "chart.js": "^2.7.3",
     "flat": "^4.1.0",
+    "iframe-phone": "^1.2.0",
     "immutable": "^3.8.2",
     "lodash": "^4.17.11",
     "markdown-to-jsx": "^6.9.0",
