--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "lint:build": "tslint -c tslint-build.json 'src/**/*.{ts,tsx}'",
     "lint:fix": "tslint -c tslint-build.json --fix 'src/**/*.{ts,tsx}'",
     "lint:unused": "tsc --noUnusedLocals --project .",
+    "update-authoring-types": "node scripts/update-authoring-types.js",
     "test": "jest",
     "test:all": "npm-run-all build test start",
     "test:coverage": "jest --coverage",
@@ -87,6 +88,7 @@
     "fork-ts-checker-webpack-plugin": "^0.4.9",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
+    "json-schema-to-typescript": "^6.1.1",
     "mini-css-extract-plugin": "^0.4.2",
     "node-pre-gyp": "^0.11.0",
     "node-sass": "^4.9.3",
