Add chart annotation model, with tests
This uses the charts-annotation plugin

https://github.com/chartjs/chartjs-plugin-annotation

In order to simplify adding of annotations, the ChartAnnotationModel takes
relatively few options, which are expanded into all the properties the
plugin expects, using some assumptions.

[#162738018]

--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
   },
   "dependencies": {
     "chart.js": "^2.7.3",
+    "chartjs-plugin-annotation": "git+https://github.com/chartjs/chartjs-plugin-annotation.git#b22a69b6",
     "flat": "^4.1.0",
     "iframe-phone": "^1.2.0",
     "immutable": "^3.8.2",
