--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "mobx-react": "^5.2.8",
     "mobx-state-tree": "^3.4.0",
     "organelle": "0.0.11",
+    "patternomaly": "^1.3.2",
     "populations-react": "0.0.3",
     "populations.js": "^0.1.13",
     "query-string": "^6.1.0",
