--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "rc-slider": "^8.6.3",
     "react": "^16.5.0",
     "react-chartjs-2": "^2.7.4",
+    "react-dimensions": "^1.3.1",
     "react-dom": "^16.5.0",
     "react-jsonschema-form": "^1.0.5",
     "react-sizeme": "^2.5.2",
