--- a/package.json
+++ b/package.json
@@ -78,7 +78,6 @@
     "autoprefixer": "^9.1.5",
     "babel-core": "^6.26.3",
     "babel-jest": "^24.8.0",
-    "canvas-prebuilt": "^1.6.11",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "cypress": "^3.4.1",
@@ -91,7 +90,7 @@
     "json-schema-to-typescript": "^6.1.1",
     "mini-css-extract-plugin": "^0.4.2",
     "node-pre-gyp": "^0.11.0",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.2",
@@ -111,6 +110,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "canvas": "^2.6.0",
     "chart.js": "^2.7.3",
     "chartjs-plugin-annotation": "git+https://github.com/chartjs/chartjs-plugin-annotation.git#b22a69b6",
     "flat": "^4.1.0",
