--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "babel-jest": "^24.8.0",
     "canvas-prebuilt": "^1.6.11",
     "copy-webpack-plugin": "^4.5.2",
-    "css-loader": "^1.0.0",
+    "css-loader": "^3.2.0",
     "cypress": "^3.4.1",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
@@ -91,7 +91,7 @@
     "json-schema-to-typescript": "^6.1.1",
     "mini-css-extract-plugin": "^0.4.2",
     "node-pre-gyp": "^0.11.0",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
     "rimraf": "^2.6.2",
@@ -105,14 +105,14 @@
     "tslint-loader": "^3.6.0",
     "tslint-react": "^3.6.0",
     "typescript": "^3.1.1",
-    "url-loader": "^1.1.1",
+    "url-loader": "^2.2.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
-    "chart.js": "^2.7.3",
-    "chartjs-plugin-annotation": "git+https://github.com/chartjs/chartjs-plugin-annotation.git#b22a69b6",
+    "chart.js": "^2.9.3",
+    "chartjs-plugin-annotation": "^0.5.7",
     "flat": "^4.1.0",
     "gifler": "^0.1.0",
     "iframe-phone": "^1.2.0",
