--- a/package.json
+++ b/package.json
@@ -78,7 +78,6 @@
     "autoprefixer": "^9.1.5",
     "babel-core": "^6.26.3",
     "babel-jest": "^24.8.0",
-    "canvas-prebuilt": "^1.6.11",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^3.2.0",
     "cypress": "^3.4.1",
@@ -111,6 +110,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "canvas": "^2.6.0",
     "chart.js": "^2.9.3",
     "chartjs-plugin-annotation": "^0.5.7",
     "flat": "^4.1.0",
