--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
+    "react-svg-loader": "^3.0.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "script-loader": "^0.7.2",
@@ -105,7 +106,7 @@
     "tslint-react": "^3.6.0",
     "typescript": "^3.1.1",
     "url-loader": "^2.2.0",
-    "webpack": "^4.20.2",
+    "webpack": "^4.41.2",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.14"
   },
