--- a/package.json
+++ b/package.json
@@ -80,7 +80,7 @@
     "babel-jest": "^24.8.0",
     "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^3.2.0",
-    "cypress": "^3.4.1",
+    "cypress": "^3.7.0",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "file-loader": "^2.0.0",
@@ -93,7 +93,6 @@
     "node-sass": "^4.13.0",
     "npm-run-all": "^4.1.5",
     "postcss-loader": "^3.0.0",
-    "react-svg-loader": "^3.0.3",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
     "script-loader": "^0.7.2",
@@ -133,6 +132,7 @@
     "react-chartjs-2": "^2.7.4",
     "react-dimensions": "^1.3.1",
     "react-dom": "^16.5.0",
+    "react-inlinesvg": "^1.2.0",
     "react-jsonschema-form": "^1.0.5",
     "screenfull": "^5.0.0",
     "svg-path-properties": "^0.4.7",
