--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,11 @@ cache:
 # cf. https://stackoverflow.com/a/52387639
 install:
 - travis_retry gem install s3_website -v 3.4.0
-- travis_retry pip install awscli --upgrade --user
 - travis_retry npm ci
 - travis_retry cypress install
+# the next command is to fix "SSLContext object is not available" error in awscli install
+- travis_retry pyenv global 3.6
+- travis_retry pip install awscli --upgrade --user
 script:
 - npm run build
 - npm run test:coverage -- --runInBand
