--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "@types/lodash": "^4.14.116",
     "@types/query-string": "^6.1.0",
     "@types/rc-slider": "^8.6.5",
-    "@types/react": "^16.4.14",
+    "@types/react": "^16.14.11",
     "@types/react-dom": "^16.0.8",
     "@types/react-jsonschema-form": "^1.0.11",
     "@types/uuid": "^3.4.4",
@@ -115,6 +115,7 @@
     "chartjs-plugin-annotation": "^0.5.7",
     "chartjs-plugin-datalabels": "^0.7.0",
     "flat": "^4.1.0",
+    "formik": "^2.2.9",
     "gifler": "^0.1.0",
     "iframe-phone": "^1.2.0",
     "immutable": "^3.8.2",
@@ -129,10 +130,10 @@
     "populations.js": "^0.1.13",
     "query-string": "^6.1.0",
     "rc-slider": "^8.7.1",
-    "react": "^16.5.0",
+    "react": "^16.14.0",
     "react-chartjs-2": "^2.7.4",
     "react-dimensions": "^1.3.1",
-    "react-dom": "^16.5.0",
+    "react-dom": "^16.14.0",
     "react-inlinesvg": "^1.2.0",
     "react-jsonschema-form": "^1.0.5",
     "screenfull": "^5.0.0",
